attempting to fix text alignment

--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -86,6 +86,7 @@ h3 {
 h4_alt {
   font-weight: 400;
   font-size: 21px;
+  text-align: center;
 }
 
 h4 {
